[tool.poetry]
name = "ASL Toolkit"
version = "0.1.0"
description = "Tools for creating and testing Amazon State Lanague programmess."
authors = ["Mathew Power <mathew.power@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

addopts = [
  "--maxfail=1",
  "--junitxml=report.xml",
  "-vv",
  "-s",
  "--log-cli-level=ERROR",
  "--cov=asl_toolkit",
  "--cov-fail-under=100",
  "--cov-report=term-missing",
]


[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["*.tests.*"]
disallow_untyped_defs = false

[tool.isort]
profile = "black"
